Restore index.html to original state
Restored the original content of index.html after accidental deletion.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>
                     <div class="d-flex gap-3">
                         <a href="#projects" class="btn btn-primary shadow">View Case Studies</a>
-                        <a href="https://github.com/revasilicon" class="btn btn-light border px-4">GitHub Profile</a>
+                        <!--a href="https://github.com/revasilicon" class="btn btn-light border px-4">GitHub Profile</a-->
                     </div>
                 </div>
             </div>
@@ -171,4 +171,5 @@
     </footer>
 
 </body>
+
 </html>
