--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="skill-card">
                         <h5 class="fw-800 mb-4">Backend & Cloud</h5>
                         <div class="d-flex flex-wrap">
-                            <span class="tech-pill">Node.js</span> <span class="tech-pill">Express</span>
+                            <span class="tech-pill">Node.js</span> <span class="tech-pill">Express</span><span class="tech-pill">Java (Spring Boot)</span>
                             <span class="tech-pill">REST APIs</span> <span class="tech-pill">Core PHP</span>
                             <span class="tech-pill">AWS (EC2/S3)</span> <span class="tech-pill">Nginx</span>
                             <span class="tech-pill">MySQL</span> <span class="tech-pill">MS SQL</span>
@@ -173,3 +173,4 @@
 </body>
 
 </html>
+
